Ajustes adicionais nas consultas.

--- a/LinkVoluntario/Views/Home/Index.cshtml
+++ b/LinkVoluntario/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Página inicial";
 }
 <header style="background-color: #99CC32; text-align: center">
     <div class="container text-center" style="color: white">
