--- a/LinkVoluntario/Views/Institution/EditarCadastro.cshtml
+++ b/LinkVoluntario/Views/Institution/EditarCadastro.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Editar seu cadastro</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit","Institution"))
 {
     @Html.AntiForgeryToken()
 
@@ -20,7 +20,6 @@
                 @Html.ValidationMessageFor(model => model.CNPJ, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.SocialName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -28,7 +27,6 @@
                 @Html.ValidationMessageFor(model => model.SocialName, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.FantasyName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -36,7 +34,6 @@
                 @Html.ValidationMessageFor(model => model.FantasyName, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -51,7 +48,6 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -59,9 +55,107 @@
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
+        <p class=""><b>Endereço</b></p><br />
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Salvar" class="btn btn-default" />
+            @Html.LabelFor(m => m.Adresses[0].Street, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(m => m.Adresses[0].Street, "", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Adresses[0].Street, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Adresses[0].Number, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(m => m.Adresses[0].Number, "", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Adresses[0].Number, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Adresses[0].PostalCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(m => m.Adresses[0].PostalCode, "", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Adresses[0].PostalCode, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Adresses[0].City, new { @class = "control-label col-sm-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(m => m.Adresses[0].City, "", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Adresses[0].City, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Adresses[0].State, new { @class = "control-label col-sm-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(m => m.Adresses[0].State, "", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Adresses[0].State, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <p class=""><b>Telefone</b></p><br />
+        <div class="form-group">
+            <div class="form-group">
+                @Html.LabelFor(m => m.Phones[0].AreaCode, new { @class = "control-label col-sm-2" })
+                @Html.EditorFor(m => m.Phones[0].AreaCode, "", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Phones[0].AreaCode, null, new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Phones[0].Number, new { @class = "control-label col-sm-2" })
+                @Html.EditorFor(m => m.Phones[0].Number, "", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Phones[0].Number, null, new { @class = "text-danger" })
+            </div>
+        </div>
+        <p class=""><b>Categorias</b></p><br />
+        <div class="form-group">
+            <div class="form-group; center-block">
+                @foreach (var categoria in Model.Categories)
+                {
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"
+                                   name="SelectedCategories"
+                                   value="@categoria.Value" />
+                            @categoria.Text
+                        </label>
+                    </div>
+                }
+            </div>
+        </div>
+        <p class=""><b>Fotos</b></p><br />
+        <div class="form-group">
+            @foreach (var photo in Model.PhotosModel)
+            {
+                <div class="col-sm-4" style="padding-bottom:10px;">
+                    <img class="card-img-top" src="@Url.Action("GetImage","Home", new { photoId = photo.PhotoId})" width="286" height="180" alt="Card image cap"><br />
+                    <a data-toggle="modal" data-target="#exampleModalLong" href="#">Excluir imagem</a>
+                </div>
+            }
+        </div>
+        <p class=""><b>Adicionar novas fotos</b></p><br />
+        <div class="form-group">
+            <input type="file" name="Photos" multiple />
+        </div>
+        <div class="form-group">
+            <div class="">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title">Excluir imagem</h1>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h3>Tem certeza que você deseja excluir esta imagem?</h3>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Sim</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Não</button>
+                </div>
             </div>
         </div>
     </div>
