--- a/LinkVoluntario/Views/Institution/Register.cshtml
+++ b/LinkVoluntario/Views/Institution/Register.cshtml
@@ -10,73 +10,99 @@
             <p class=""><b>Dados da institutição</b></p><br />
             <div class="form-group">
                 @Html.LabelFor(m => m.CNPJ, new { @class = "control-label col-sm-2" })
-                @Html.EditorFor(m => m.CNPJ, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.CNPJ, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.EditorFor(m => m.CNPJ, "", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(m => m.CNPJ, null, new { @class = "text-danger" })
+                </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.SocialName, new { @class = "control-label col-sm-2" })
-                @Html.EditorFor(m => m.SocialName, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.SocialName, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.EditorFor(m => m.SocialName, "", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(m => m.SocialName, null, new { @class = "text-danger" })
+                </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.FantasyName, new { @class = "control-label col-sm-2" })
-                @Html.EditorFor(m => m.FantasyName, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.FantasyName, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.EditorFor(m => m.FantasyName, "", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(m => m.FantasyName, null, new { @class = "text-danger" })
+                </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Description, new { @class = "control-label col-sm-2" })
-                @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Description, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Description, null, new { @class = "text-danger" })
+                </div>
             </div>
             <div class="form-group">
                 <label for="Email" class="control-label col-sm-2">E-mail</label>
-                @Html.EditorFor(m => m.Email)
-                @Html.ValidationMessageFor(m => m.Email, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.EditorFor(m => m.Email, "", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(m => m.Email, null, new { @class = "text-danger" })
+                </div>
             </div>
             <div class="form-group">
                 <label for="Password" class="control-label col-sm-2">Senha</label>
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Password, null, new { @class = "text-danger" })
+                </div>
             </div>
-            <p class=""><b>Endereços</b></p><br />
+            <p class=""><b>Endereço</b></p><br />
             <div class="form-group">
                 <div class="form-group">
                     @Html.LabelFor(m => m.Adresses[0].Street, new { @class = "control-label col-sm-2" })
-                    @Html.EditorFor(m => m.Adresses[0].Street)
-                    @Html.ValidationMessageFor(m => m.Adresses[0].Street, null, new { @class = "text-danger" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(m => m.Adresses[0].Street, "", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(m => m.Adresses[0].Street, null, new { @class = "text-danger" })
+                    </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Adresses[0].Number, new { @class = "control-label col-sm-2" })
-                    @Html.EditorFor(m => m.Adresses[0].Number)
-                    @Html.ValidationMessageFor(m => m.Adresses[0].Number, null, new { @class = "text-danger" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(m => m.Adresses[0].Number, "", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(m => m.Adresses[0].Number, null, new { @class = "text-danger" })
+                    </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Adresses[0].PostalCode, new { @class = "control-label col-sm-2" })
-                    @Html.EditorFor(m => m.Adresses[0].PostalCode)
-                    @Html.ValidationMessageFor(m => m.Adresses[0].PostalCode, null, new { @class = "text-danger" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(m => m.Adresses[0].PostalCode, "", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(m => m.Adresses[0].PostalCode, null, new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Adresses[0].City, new { @class = "control-label col-sm-2" })
-                @Html.EditorFor(m => m.Adresses[0].City)
-                @Html.ValidationMessageFor(m => m.Adresses[0].City, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.EditorFor(m => m.Adresses[0].City, "", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(m => m.Adresses[0].City, null, new { @class = "text-danger" })
+                </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Adresses[0].State, new { @class = "control-label col-sm-2" })
-                @Html.EditorFor(m => m.Adresses[0].State)
-                @Html.ValidationMessageFor(m => m.Adresses[0].State, null, new { @class = "text-danger" })
+                <div class="col-md-10">
+                    @Html.EditorFor(m => m.Adresses[0].State, "", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(m => m.Adresses[0].State, null, new { @class = "text-danger" })
+                </div>
             </div>
-            <p class=""><b>Telefones</b></p><br />
+            <p class=""><b>Telefone</b></p><br />
             <div class="form-group">
                 <div class="form-group">
                     @Html.LabelFor(m => m.Phones[0].AreaCode, new { @class = "control-label col-sm-2" })
-                    @Html.EditorFor(m => m.Phones[0].AreaCode)
-                    @Html.ValidationMessageFor(m => m.Phones[0].AreaCode, null, new { @class = "text-danger" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(m => m.Phones[0].AreaCode, "", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(m => m.Phones[0].AreaCode, null, new { @class = "text-danger" })
+                    </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Phones[0].Number, new { @class = "control-label col-sm-2" })
-                    @Html.EditorFor(m => m.Phones[0].Number)
-                    @Html.ValidationMessageFor(m => m.Phones[0].Number, null, new { @class = "text-danger" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(m => m.Phones[0].Number, "", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(m => m.Phones[0].Number, null, new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
             <p class=""><b>Categorias</b></p><br />
