--- a/LinkVoluntario/Views/Institution/EditarCadastro.cshtml
+++ b/LinkVoluntario/Views/Institution/EditarCadastro.cshtml
@@ -6,14 +6,14 @@
 
 <h2>Editar seu cadastro</h2>
 
-@using (Html.BeginForm("Edit", "Institution"))
+@using (Html.BeginForm("Edit", "Institution", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.InstitutionId)
     @Html.HiddenFor(m => m.CNPJ)
     <div class="form-horizontal">
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.CNPJ, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -127,16 +127,16 @@
             {
                 <div class="col-sm-4" style="padding-bottom:10px;">
                     <img class="card-img-top" src="@Url.Action("GetImage","Home", new { photoId = photo.PhotoId})" width="286" height="180" alt="Card image cap"><br />
-                    <a data-toggle="modal" data-target="#exampleModalLong" href="#">Excluir imagem</a>
+                    <a data-toggle="modal" data-target="#exampleModalLong" onclick="$('#hdnIdPhoto').val(@photo.PhotoId)">Excluir imagem</a>
                 </div>
             }
         </div>
         <p class=""><b>Adicionar novas fotos</b></p><br />
         <div class="form-group">
-            <input type="file" name="Photos" multiple />
+            <input type="file" name="NewPhotos" multiple />
         </div>
         <div class="form-group">
-            @Html.CheckBoxFor(m => m.AcceptedTermsUse) Aceito os <a data-toggle="modal" data-target="#exampleModalLong" href="#">termos de uso</a> deste site.
+            @Html.CheckBoxFor(m => m.AcceptedTermsUse) Aceito os <a data-toggle="modal" data-target="#modalTermsUse" href="#">termos de uso</a> deste site.
             @Html.ValidationMessageFor(m => m.AcceptedTermsUse, null, new { @class = "text-danger" })
         </div>
         <div class="form-group">
@@ -145,6 +145,7 @@
             </div>
         </div>
     </div>
+
     <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -158,11 +159,45 @@
                     <p>Tem certeza que você deseja excluir esta imagem?</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Sim</button>
+
+                    <input type="hidden" id="hdnIdPhoto" name="PhotoId" />
+                    <button type="button" onclick="DeletePhoto($('#hdnIdPhoto').val());" class="btn btn-primary">Sim</button>
+
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Não</button>
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal fade" id="modalTermsUse" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title">Termos de uso do site</h1>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h2>Política de privacidade para <a href='http://linkvoluntario.org.br'>Link Voluntario</a></h2><p>Todas as suas informações pessoais recolhidas, serão usadas para o ajudar a tornar a sua visita no nosso site o mais produtiva e agradável possível.</p><p>Ao concordar com esse termo, você (instituição) concorda em ter Deu perfil divulgado, bem como as informações nele contida.</p><p>A garantia da confidencialidade dos dados pessoais dos utilizadores do nosso site é importante para o Link Voluntario.</p><p>Todas as informações pessoais relativas a membros, assinantes, clientes ou visitantes que usem o Link Voluntario serão tratadas em concordância com a Lei da Proteção de Dados Pessoais de 26 de outubro de 1998 (Lei n.º 67/98).</p><p>A informação pessoal recolhida pode incluir o seu nome, e-mail, número de telefone e/ou telemóvel, morada, data de nascimento e/ou outros.</p><p>O uso do Link Voluntario pressupõe a aceitação deste Acordo de privacidade. A equipa do Link Voluntario reserva-se ao direito de alterar este acordo sem aviso prévio. Deste modo, recomendamos que consulte a nossa política de privacidade com regularidade de forma a estar sempre atualizado.</p><h2>Os anúncios</h2><p>Tal como outros websites, coletamos e utilizamos informação contida nos anúncios. A informação contida nos anúncios, inclui o seu endereço IP (Internet Protocol), o seu ISP (Internet Service Provider, como o Sapo, Clix, ou outro), o browser que utilizou ao visitar o nosso website (como o Internet Explorer ou o Firefox), o tempo da sua visita e que páginas visitou dentro do nosso website.</p><h2>Cookie DoubleClick Dart</h2><p>O Google, como fornecedor de terceiros, utiliza cookies para exibir anúncios no nosso website;</p><p>Com o cookie DART, o Google pode exibir anúncios com base nas visitas que o leitor fez a outros websites na Internet;</p><p>Os utilizadores podem desativar o cookie DART visitando a Política de <a href='http://politicaprivacidade.com/' title='privacidade da rede de conteúdo'>privacidade da rede de conteúdo</a> e dos anúncios do Google.</p><h2>Os Cookies e Web Beacons</h2><p>Utilizamos cookies para armazenar informação, tais como as suas preferências pessoas quando visita o nosso website. Isto poderá incluir um simples popup, ou uma ligação em vários serviços que providenciamos, tais como fóruns.</p><p>Em adição também utilizamos publicidade de terceiros no nosso website para suportar os custos de manutenção. Alguns destes publicitários, poderão utilizar tecnologias como os cookies e/ou web beacons quando publicitam no nosso website, o que fará com que esses publicitários (como o Google através do Google AdSense) também recebam a sua informação pessoal, como o endereço IP, o seu ISP, o seu browser, etc. Esta função é geralmente utilizada para geotargeting (mostrar publicidade de Lisboa apenas aos leitores oriundos de Lisboa por ex.) ou apresentar publicidade direcionada a um tipo de utilizador (como mostrar publicidade de restaurante a um utilizador que visita sites de culinária regularmente, por ex.).</p><p>Você detém o poder de desligar os seus cookies, nas opções do seu browser, ou efetuando alterações nas ferramentas de programas Anti-Virus, como o Norton Internet Security. No entanto, isso poderá alterar a forma como interage com o nosso website, ou outros websites. Isso poderá afetar ou não permitir que faça logins em programas, sites ou fóruns da nossa e de outras redes.</p><h2>Ligações a Sites de terceiros</h2><p>O Link Voluntario possui ligações para outros sites, os quais, a nosso ver, podem conter informações / ferramentas úteis para os nossos visitantes. A nossa política de privacidade não é aplicada a sites de terceiros, pelo que, caso visite outro site a partir do nosso deverá ler a politica de privacidade do mesmo.</p><p>Não nos responsabilizamos pela política de privacidade ou conteúdo presente nesses mesmos sites.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+        function DeletePhoto(photoId)
+        {          
+            $.ajax({
+                type: "POST",
+                url: "@Url.Action("DeletePhoto", "Institution")",
+                data: { PhotoId: photoId },
+                success: function(data) {
+                    location.reload();
+                }
+            });
+        }
+    </script>
 }
 
